# InterviewGenie_v4

./: .env  hello.py  pyproject.toml
components/: postprocessing.py  preprocessing.py  simulation.py
helpers/: CustomException.py  utils.py
pipelines/: postprocessing_simulation.py  preprocessing_pipeline.py  simulation_pipeline.py
