[project]
name = "interviewgenie-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "fitz>=0.0.1.dev2",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.26",
    "langgraph>=0.5.1",
    "openai>=1.93.0",
    "seaborn>=0.13.2",
    "dotenv>=0.9.9",
    "pymupdf>=1.26.3",
    "tavily-python>=0.7.9",
    "langchain-community>=0.3.27",
    "langchain-tavily>=0.2.7",
]
